--- a/app/src/main/res/layout/fragment_comic.xml
+++ b/app/src/main/res/layout/fragment_comic.xml
@@ -22,28 +22,19 @@
             tools:src="@drawable/landscape_incredible"
             />
 
-        <RelativeLayout
-            android:id="@+id/rlComicImage"
+        <ImageView
+            android:id="@+id/imgComicCover"
+            android:layout_width="@dimen/dimen_150dp"
+            android:layout_height="@dimen/dimen_200dp"
+            tools:src="@drawable/comic_image"
             android:background="@color/color_white"
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:layout_marginStart="@dimen/dimen_10dp"
-            android:layout_marginTop="@dimen/dimen_10dp"
-            android:contentDescription="@string/comic_cover_image"
+            android:scaleType="fitXY"
+            android:padding="@dimen/dimen_5dp"
+            android:layout_margin="@dimen/dimen_10dp"
+            android:contentDescription="@string/comic_image_cover"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/comicToolbar"
-            >
-
-            <ImageView
-                android:id="@+id/imgComicCover"
-                android:layout_width="@dimen/dimen_150dp"
-                android:layout_height="@dimen/dimen_200dp"
-                tools:src="@drawable/comic_image"
-                android:scaleType="fitXY"
-                android:padding="@dimen/dimen_5dp"
-                android:contentDescription="@string/comic_image_cover"
-                />
-        </RelativeLayout>
+            />
 
         <TextView
             android:id="@+id/txtTitleComic"
@@ -58,7 +49,7 @@
             tools:text="AMAZING SPIDER-MAN VOL. 2 HC (Hardcover)"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/rlComicImage"
+            app:layout_constraintTop_toBottomOf="@id/imgComicCover"
             />
 
         <TextView
